# flashTP

./: .gitignore  0111_profile.py  README.md  kernel_profiler.py  pyproject.toml  setup.py
example/: all_exp_end2end_torch_base.py  all_exp_end2end_torch_debug.py  all_exp_end2end_torch_profile.py  flashTP_lammps_test.py  flashTP_test.py  run_all_exp_end2end_torch_ablation_b03.sh  run_all_exp_end2end_torch_profile_b03.sh  run_all_exp_end2end_torch_profile_b03_020.sh  test.sh
flashTP_e3nn/: flashTP.py  utils.py
flashTP_e3nn/sptp_exp_opt/: fused_e3nn_exp_opt.py
flashTP_e3nn/sptp_exp_opt_extcg/: fused_e3nn_exp_opt_extcg.py
flashTP_e3nn/sptp_exp_opt_large/: fused_e3nn_exp_opt_large.py  fused_e3nn_exp_opt_large_lammps.py  sptp_exp_opt_large.cpp  torch_register.cpp
