[project]
name = "flashTP_e3nn"
version = "0.1.0"
description = ""
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "torch>=2.4.1",
    "e3nn",
    "ninja"
]

[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["flashTP_e3nn*"]
exclude = ["example*"]

[tool.setuptools.package-data]
flashTP_e3nn = [
    "sptp_exp_opt*/*.cpp",
    "sptp_exp_opt*/*.cu",
    "sptp_exp_opt*/*.hpp",
    "sptp_exp_opt*/CMakeLists.txt"
]
