[project]
name = "flashTP_e3nn"
version = "0.1.1"
description = "Torch-native C++/CUDA library to accelerate tensor-product layers in MLIPs"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.4.1",
    "e3nn"
]
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=61", "wheel", "torch>=2.4.1","ninja"]
build-backend = "setuptools.build_meta"


[tool.setuptools.packages.find]
include = ["flashTP_e3nn*"]
exclude = ["example*"]

[tool.setuptools.package-data]
flashTP_e3nn = [
    "sptp_exp_opt_extcg/*.{cpp,cu,hpp}",
    "sptp_exp_opt_large/*.{cpp,cu,hpp}",
    "sptp_exp_opt*/CMakeLists.txt"
]
